[package]
name = "axe"
version = "0.1.0"
authors = ["Abhijat Malviya <malviya.abhijat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = "2.33"
structopt = "0.3"
