[package]
name = "axe"
version = "0.1.0"
authors = ["Abhijat Malviya <malviya.abhijat@gmail.com>"]
edition = "2018"
description = "A tool to split a Reddit dataset by various keys"
license = "MIT"
repository = "https://github.com/abhijat/axe"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = "2.33"
structopt = "0.3"
